--- a/404.html
+++ b/404.html
@@ -3,15 +3,15 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>Shijie Lin</title>
-    <meta name="description" content="The personal website of Lin">
+    <title>Xuhong Wang</title>
+    <meta name="description" content="The personal website of XH.Wang">
     <link rel="icon" href="/logo.png">
     
-    <link rel="preload" href="/assets/css/0.styles.13c396a0.css" as="style"><link rel="preload" href="/assets/js/app.974146b1.js" as="script"><link rel="prefetch" href="/assets/js/8.0442aaa7.js"><link rel="prefetch" href="/assets/js/1.d8920f58.js"><link rel="prefetch" href="/assets/js/2.c1f7085b.js"><link rel="prefetch" href="/assets/js/3.31cea1da.js"><link rel="prefetch" href="/assets/js/4.a6033fb1.js"><link rel="prefetch" href="/assets/js/5.a41c24de.js"><link rel="prefetch" href="/assets/js/6.c22ae5cb.js"><link rel="prefetch" href="/assets/js/7.4f2a1402.js"><link rel="prefetch" href="/assets/js/9.d76348f3.js"><link rel="prefetch" href="/assets/js/10.8e81a244.js"><link rel="prefetch" href="/assets/js/11.6c240a64.js"><link rel="prefetch" href="/assets/js/12.ca1ce2dc.js"><link rel="prefetch" href="/assets/js/13.bdce6eb9.js"><link rel="prefetch" href="/assets/js/14.0e2d29d4.js"><link rel="prefetch" href="/assets/js/15.fbd17586.js"><link rel="prefetch" href="/assets/js/16.e2f9269a.js">
+    <link rel="preload" href="/assets/css/0.styles.13c396a0.css" as="style"><link rel="preload" href="/assets/js/app.661920c0.js" as="script"><link rel="prefetch" href="/assets/js/8.e9f7ba19.js"><link rel="prefetch" href="/assets/js/1.d8920f58.js"><link rel="prefetch" href="/assets/js/2.8e35844a.js"><link rel="prefetch" href="/assets/js/3.2a926c4a.js"><link rel="prefetch" href="/assets/js/4.79ec3c51.js"><link rel="prefetch" href="/assets/js/5.c379b70e.js"><link rel="prefetch" href="/assets/js/6.3e6b2cc0.js"><link rel="prefetch" href="/assets/js/7.4f2a1402.js"><link rel="prefetch" href="/assets/js/9.7e18f9b0.js"><link rel="prefetch" href="/assets/js/10.7e37480c.js"><link rel="prefetch" href="/assets/js/11.886eba4f.js"><link rel="prefetch" href="/assets/js/12.3ddff534.js"><link rel="prefetch" href="/assets/js/13.b0cb5c8d.js"><link rel="prefetch" href="/assets/js/14.2c04391d.js"><link rel="prefetch" href="/assets/js/15.d1e84a61.js"><link rel="prefetch" href="/assets/js/16.835d2599.js"><link rel="prefetch" href="/assets/js/17.243a3ab7.js">
     <link rel="stylesheet" href="/assets/css/0.styles.13c396a0.css">
   </head>
   <body>
-    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="content"><h1>404</h1> <blockquote>How did we get here?</blockquote> <a href="/" class="router-link-active">Take me home.</a></div></div></div>
-    <script src="/assets/js/app.974146b1.js" defer></script>
+    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="content"><h1>404</h1> <blockquote>That's a Four-Oh-Four.</blockquote> <a href="/" class="router-link-active">Take me home.</a></div></div></div>
+    <script src="/assets/js/app.661920c0.js" defer></script>
   </body>
 </html>
