--- a/404.html
+++ b/404.html
@@ -3,15 +3,15 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>Xuhong Wang</title>
-    <meta name="description" content="The personal website of XH.Wang">
+    <title>VuePress</title>
+    <meta name="description" content="">
     <link rel="icon" href="/logo.png">
     
-    <link rel="preload" href="/assets/css/0.styles.13c396a0.css" as="style"><link rel="preload" href="/assets/js/app.d4be71d4.js" as="script"><link rel="prefetch" href="/assets/js/12.23a0df9a.js"><link rel="prefetch" href="/assets/js/1.d8920f58.js"><link rel="prefetch" href="/assets/js/2.3b8e56de.js"><link rel="prefetch" href="/assets/js/3.736c52d4.js"><link rel="prefetch" href="/assets/js/4.015c1ffa.js"><link rel="prefetch" href="/assets/js/5.b621682d.js"><link rel="prefetch" href="/assets/js/6.948097b5.js"><link rel="prefetch" href="/assets/js/7.85f132cf.js"><link rel="prefetch" href="/assets/js/8.f3d2c083.js"><link rel="prefetch" href="/assets/js/9.74180d32.js"><link rel="prefetch" href="/assets/js/10.39bd2d94.js"><link rel="prefetch" href="/assets/js/11.14f4a07a.js"><link rel="prefetch" href="/assets/js/13.b82060e1.js"><link rel="prefetch" href="/assets/js/14.165ed585.js"><link rel="prefetch" href="/assets/js/15.f03768e2.js"><link rel="prefetch" href="/assets/js/16.1f4d70a3.js"><link rel="prefetch" href="/assets/js/17.4c038b4f.js"><link rel="prefetch" href="/assets/js/18.d67f0418.js"><link rel="prefetch" href="/assets/js/19.c96bd5ab.js"><link rel="prefetch" href="/assets/js/20.a3b526cb.js"><link rel="prefetch" href="/assets/js/21.a8db33e0.js"><link rel="prefetch" href="/assets/js/22.f49179d4.js"><link rel="prefetch" href="/assets/js/23.cc47f2be.js"><link rel="prefetch" href="/assets/js/24.8c730779.js"><link rel="prefetch" href="/assets/js/25.f091c284.js">
-    <link rel="stylesheet" href="/assets/css/0.styles.13c396a0.css">
+    <link rel="preload" href="/assets/css/0.styles.e4af7b00.css" as="style"><link rel="preload" href="/assets/js/app.9fc8c6f0.js" as="script"><link rel="prefetch" href="/assets/js/13.8d2be567.js"><link rel="prefetch" href="/assets/js/1.1d131df0.js"><link rel="prefetch" href="/assets/js/vendors~docsearch.a744cb11.js"><link rel="prefetch" href="/assets/js/3.1a471ebd.js"><link rel="prefetch" href="/assets/js/4.2299c1da.js"><link rel="prefetch" href="/assets/js/5.c415e9f8.js"><link rel="prefetch" href="/assets/js/6.f508004f.js"><link rel="prefetch" href="/assets/js/7.d02ae41d.js"><link rel="prefetch" href="/assets/js/8.249eb0db.js"><link rel="prefetch" href="/assets/js/9.c8ec9ac2.js"><link rel="prefetch" href="/assets/js/10.2605ad92.js"><link rel="prefetch" href="/assets/js/11.41c7ecf9.js"><link rel="prefetch" href="/assets/js/12.3c507e81.js"><link rel="prefetch" href="/assets/js/14.fe2478dc.js"><link rel="prefetch" href="/assets/js/15.d7d61d4b.js"><link rel="prefetch" href="/assets/js/16.a9e71f95.js"><link rel="prefetch" href="/assets/js/17.78dc3951.js"><link rel="prefetch" href="/assets/js/18.9ce938ea.js"><link rel="prefetch" href="/assets/js/19.c721387c.js"><link rel="prefetch" href="/assets/js/20.084f1841.js"><link rel="prefetch" href="/assets/js/21.4cb1415d.js"><link rel="prefetch" href="/assets/js/22.2eacd539.js"><link rel="prefetch" href="/assets/js/23.1459f4f8.js"><link rel="prefetch" href="/assets/js/24.ad290315.js"><link rel="prefetch" href="/assets/js/25.ac382daa.js"><link rel="prefetch" href="/assets/js/26.bb5c16ba.js">
+    <link rel="stylesheet" href="/assets/css/0.styles.e4af7b00.css">
   </head>
   <body>
-    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="content"><h1>404</h1> <blockquote>Looks like we've got some broken links.</blockquote> <a href="/" class="router-link-active">Take me home.</a></div></div></div>
-    <script src="/assets/js/app.d4be71d4.js" defer></script>
+    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="content"><h1>404</h1> <blockquote>How did we get here?</blockquote> <a href="/" class="router-link-active">Take me home.</a></div></div></div>
+    <script src="/assets/js/app.9fc8c6f0.js" defer></script>
   </body>
 </html>
