--- a/404.html
+++ b/404.html
@@ -3,15 +3,15 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>VuePress</title>
-    <meta name="description" content="Vue-powered Static Site Generator">
-    <link rel="icon" href="/logo.png">
+    <title>Xuhong Wang</title>
+    <meta name="description" content="Xuhong&#96;s personal page">
     
-    <link rel="preload" href="/assets/css/0.styles.bb89480b.css" as="style"><link rel="preload" href="/assets/js/app.e7a5c6e1.js" as="script"><link rel="prefetch" href="/assets/js/13.15b38f91.js"><link rel="prefetch" href="/assets/js/1.1d131df0.js"><link rel="prefetch" href="/assets/js/vendors~docsearch.a744cb11.js"><link rel="prefetch" href="/assets/js/3.f8c7cf7a.js"><link rel="prefetch" href="/assets/js/4.1af9a786.js"><link rel="prefetch" href="/assets/js/5.63d6a627.js"><link rel="prefetch" href="/assets/js/6.b058090a.js"><link rel="prefetch" href="/assets/js/7.86057e64.js"><link rel="prefetch" href="/assets/js/8.e2b94cc5.js"><link rel="prefetch" href="/assets/js/9.b7bff424.js"><link rel="prefetch" href="/assets/js/10.a6ac50fa.js"><link rel="prefetch" href="/assets/js/11.536b1e99.js"><link rel="prefetch" href="/assets/js/12.f3c6c440.js"><link rel="prefetch" href="/assets/js/14.dade0688.js"><link rel="prefetch" href="/assets/js/15.85f6d2ef.js"><link rel="prefetch" href="/assets/js/16.a742ee30.js"><link rel="prefetch" href="/assets/js/17.062a40c3.js"><link rel="prefetch" href="/assets/js/18.29611cce.js"><link rel="prefetch" href="/assets/js/19.c3cfadf8.js"><link rel="prefetch" href="/assets/js/20.ae7fd7f4.js"><link rel="prefetch" href="/assets/js/21.73d2b49d.js"><link rel="prefetch" href="/assets/js/22.0ec40196.js"><link rel="prefetch" href="/assets/js/23.50fd9979.js"><link rel="prefetch" href="/assets/js/24.94c19e3d.js"><link rel="prefetch" href="/assets/js/25.ac382daa.js"><link rel="prefetch" href="/assets/js/26.bb5c16ba.js">
+    
+    <link rel="preload" href="/assets/css/0.styles.bb89480b.css" as="style"><link rel="preload" href="/assets/js/app.9f04d0f6.js" as="script"><link rel="prefetch" href="/assets/js/13.15b38f91.js"><link rel="prefetch" href="/assets/js/1.1d131df0.js"><link rel="prefetch" href="/assets/js/vendors~docsearch.a744cb11.js"><link rel="prefetch" href="/assets/js/3.f8c7cf7a.js"><link rel="prefetch" href="/assets/js/4.1af9a786.js"><link rel="prefetch" href="/assets/js/5.63d6a627.js"><link rel="prefetch" href="/assets/js/6.b058090a.js"><link rel="prefetch" href="/assets/js/7.86057e64.js"><link rel="prefetch" href="/assets/js/8.e2b94cc5.js"><link rel="prefetch" href="/assets/js/9.b7bff424.js"><link rel="prefetch" href="/assets/js/10.a6ac50fa.js"><link rel="prefetch" href="/assets/js/11.536b1e99.js"><link rel="prefetch" href="/assets/js/12.f3c6c440.js"><link rel="prefetch" href="/assets/js/14.dade0688.js"><link rel="prefetch" href="/assets/js/15.85f6d2ef.js"><link rel="prefetch" href="/assets/js/16.a742ee30.js"><link rel="prefetch" href="/assets/js/17.062a40c3.js"><link rel="prefetch" href="/assets/js/18.29611cce.js"><link rel="prefetch" href="/assets/js/19.c3cfadf8.js"><link rel="prefetch" href="/assets/js/20.20a96f24.js"><link rel="prefetch" href="/assets/js/21.73d2b49d.js"><link rel="prefetch" href="/assets/js/22.0ec40196.js"><link rel="prefetch" href="/assets/js/23.50fd9979.js"><link rel="prefetch" href="/assets/js/24.94c19e3d.js"><link rel="prefetch" href="/assets/js/25.ac382daa.js"><link rel="prefetch" href="/assets/js/26.bb5c16ba.js">
     <link rel="stylesheet" href="/assets/css/0.styles.bb89480b.css">
   </head>
   <body>
-    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="content"><h1>404</h1> <blockquote>How did we get here?</blockquote> <a href="/" class="router-link-active">Take me home.</a></div></div></div>
-    <script src="/assets/js/app.e7a5c6e1.js" defer></script>
+    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="content"><h1>404</h1> <blockquote>There's nothing here.</blockquote> <a href="/" class="router-link-active">Take me home.</a></div></div></div>
+    <script src="/assets/js/app.9f04d0f6.js" defer></script>
   </body>
 </html>
