--- a/activities/Visiting Jane Street(HKG).html
+++ b/activities/Visiting Jane Street(HKG).html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>Xuhong Wang</title>
+    <title>ICRA2018 | Xuhong Wang</title>
     <meta name="description" content="Xuhong&#96;s personal page">
     
     
